--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -17,7 +17,7 @@ jobs:
           authToken: '${{ secrets.CACHIX_AUTH_TOKEN }}'
       - name: Check
         working-directory: backend
-        run: nix flake check --all-systems
+        run: nix flake check
   build:
     runs-on: ubuntu-24.04
     steps:
@@ -30,4 +30,3 @@ jobs:
       - name: Build
         working-directory: backend
         run: nix build .
-
