chore: add path filter to backend workflow

--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -3,7 +3,13 @@ on:
   push:
     branches-ignore:
       - 'dependabot/**'
+    paths:
+      - 'backend/**'
+      - '.github/workflows/backend.yml'
   pull_request:
+    paths:
+      - 'backend/**'
+      - '.github/workflows/backend.yml'
 
 jobs:
   test:
