--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "react-dom": "^19.0.0",
     "react-jsx-parser": "^2.2.2",
     "rss": "^1.2.2",
+    "rss-parser": "^3.13.0",
     "shiki": "^1.24.4"
   },
   "devDependencies": {
