--- a/actions/deploy/action.yml
+++ b/actions/deploy/action.yml
@@ -14,6 +14,7 @@ runs:
     - uses: actions/checkout@v4
     - uses: cachix/install-nix-action@v30
     - run: bash ./deploy.sh
+      shell: bash
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         WORKING_DIRECTORY: ${{ inputs.working-directory }}
