--- a/actions/deploy/action.yml
+++ b/actions/deploy/action.yml
@@ -13,7 +13,7 @@ runs:
   steps:
     - uses: actions/checkout@v4
     - uses: cachix/install-nix-action@v30
-    - run: bash ./deploy.sh
+    - run: bash ./actions/deploy/deploy.sh
       shell: bash
       env:
         WORKING_DIRECTORY: ${{ inputs.working-directory }}
