--- a/.github/workflows/example.yml
+++ b/.github/workflows/example.yml
@@ -10,6 +10,9 @@ jobs:
     runs-on: ubuntu-24.04
     steps:
       - uses: actions/checkout@v4
+      - uses: cachix/cachix-action@v2
+        with:
+          name: ravenlog
       - name: Deploy
         uses: brack-lang/ravenlog/actions/deploy@main
         with:
