--- a/.github/workflows/example.yml
+++ b/.github/workflows/example.yml
@@ -10,6 +10,7 @@ jobs:
     runs-on: ubuntu-24.04
     steps:
       - uses: actions/checkout@v4
+      - uses: cachix/install-nix-action@v30
       - uses: cachix/cachix-action@v2
         with:
           name: ravenlog
