--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -19,7 +19,7 @@ jobs:
       - uses: cachix/install-nix-action@v30
       - uses: cachix/cachix-action@v15
         with:
-          name: brack-lang
+          name: ravenlog
           authToken: '${{ secrets.CACHIX_AUTH_TOKEN }}'
       - name: Check
         working-directory: backend
@@ -31,7 +31,7 @@ jobs:
       - uses: cachix/install-nix-action@v30
       - uses: cachix/cachix-action@v15
         with:
-          name: brack-lang
+          name: ravenlog
           authToken: '${{ secrets.CACHIX_AUTH_TOKEN }}'
       - name: Build
         working-directory: backend
