--- a/actions/deploy/action.yml
+++ b/actions/deploy/action.yml
@@ -13,6 +13,9 @@ runs:
   steps:
     - uses: actions/checkout@v4
     - uses: cachix/install-nix-action@v30
+    - uses: cachix/cachix-action@v15
+      with:
+        name: ravenlog
     - run: bash ./actions/deploy/deploy.sh
       shell: bash
       env:
