--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -14,3 +14,4 @@ serde = { version = "1.0.215", features = ["derive"] }
 clap = { version = "4.5.21", features = ["derive"] }
 walkdir = "2.5.0"
 tokio = "1.41.1"
+notify = "8.0.0"
